styles.css
/* Typography */
body {
  font-family: 'Fira Sans', sans-serif;
  font-weight: 400;
  line-height: 1.45;
}
p, ol {
  margin-bottom: 1.25em;
}
h1, h2, h3, h4, h5 {
  margin: 1.75rem 0 1rem;
  font-weight: 400;
  line-height: 1.15;
}
h1 {
  font-size: 2.488em;
}
h2 {
  font-size: 2.074em;
}
h3 {
  font-size: 1.728em;
}
h4 {
  font-size: 1.44em;
}
h5 {
  font-size: 1.2em;
}
small, .text_small {
  font-size: 0.833em;
}
strong {
  font-weight: 600;
}
nav {
  font-size: 1.2rem;
}
ul {
  line-height: 1.7;
}
li > ul {
  margin-left: 1rem;
}
ol {
  list-style: decimal;
}
ol > li {
  margin-top: 1rem;
  font-weight: 600;
}
li > ul {
  font-weight: 400;
}

/* Colours */
body {
  background-color: #fffdf7;
  color: #0a2342;
}
a {
  color: #de3c4b;
}

/* Layout */
body {
  display: flex;
  justify-content: space-around;

  margin-left: 2rem;
  margin-right: 2rem;
}
section {
  display: flex;
  justify-content: space-between;
  flex-flow: column;
  align-items: center;

  min-height: 100vh;
}
nav {
  align-self: stretch;

  display: flex;
  justify-content: space-between;

  padding-bottom: 2rem;
}
.two-column {
  display: flex;
  flex-flow: column;
  justify-content: space-around;
  align-items: center;
}
.two-column > div {
  margin-top: 2rem;
}
body > div {
  width: 100%;
}

/* Misc */
.disabled {
  cursor: not-allowed;
}
.avatar {
  border-radius: 100%;
  width: 10rem;
  margin-top: 2rem;
}
.icon {
  display: inline-block;
  min-width: 2rem;
}
.in-text {
  width: 100%;
  max-width: 1000px;
  margin-top: 2rem;
  margin-bottom: 2rem;
}
.social {
  font-size: 2.4rem;
  margin-top: 2rem;
}
.social a {
  color: #0a2342;
}
.social a:hover {
  color: #de3c4b;
}
/* Wide-screen */
@media only screen and (orientation: landscape) and (min-width: 640px) {
  h1, h2, h3, h4, h5 {
    margin-top: 5rem;
  }
  section {
    align-items: stretch;
  }
  body > div {
    width: 640px;
    margin-left: 0;
    margin-right: 0;
  }
  .two-column {
    flex-flow: row-reverse;
    align-items: flex-start;
    justify-content: space-between;
  }
  .two-column > div {
    margin-top: 0;
  }
}

